k8s/platform/gateway/namespace-envoy-gateway-system.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: envoy-gateway-system
  annotations:
    argocd.argoproj.io/sync-options: Validate=false
